SERVER-43727 Yield locks on secondaries while waiting for two-phase index builds to commit or abort