jstests/noPassthrough/comment_field_passthrough.js
@@ -7,7 +7,6 @@
  *   requires_replication,
  *   requires_sharding,
  *   requires_wiredtiger,
- *   two_phase_index_builds_unsupported,
  * ]
  */
 (function() {
